doc/link_cut_tree: fixed a typo

--- a/doc/link_cut_tree.tex
+++ b/doc/link_cut_tree.tex
@@ -6,7 +6,7 @@
 
 \begin{itemize}
 \item \lstinline{Mono}：一个幺半群或半群类。需重载 \lstinline{*} 运算符。
-\item \lstinline{TREE_N}：一个整数，值应**大于**需要使用的最大下标。
+\item \lstinline{TREE_N}：一个整数，值应\textbf{大于}需要使用的最大下标。
 \end{itemize}
 
 以下公共方法均允许不实现。
