--- a/index.tex
+++ b/index.tex
@@ -63,6 +63,7 @@
 \item Codeforces: 202ms
 \item AtCoder: 221ms
 \item LibraryChecker: 176ms
+\item Luogu: 242ms
 \end{itemize}
 \begin{lstlisting}
 constexpr int N = 1e6;
@@ -83,6 +84,9 @@ for (int i = 0; i < N; ++i) {
 
 \section{数据结构}
 \include{doc/link_cut_tree}
+
+\section{计算几何}
+\include{doc/smallest_circle}
 
 \section{技巧}
 \include{doc/monoid_product}
