fixes for linear_equations

--- a/doc/linear_equations.tex
+++ b/doc/linear_equations.tex
@@ -9,6 +9,7 @@
 \item \lstinline{a}：待解的方程组矩阵，其列数应比行数恰好大 1。
 \item \lstinline{abs}：模长函数。
 \item \lstinline{is_zero}：零等函数。
+\end{itemize}
 
 在 \lstinline{a} 上原地操作，将 \lstinline{a} 的系数部分转化为单位矩阵。如有自由元或无解，返回非零值。
 
@@ -20,19 +21,19 @@
 
 \begin{tabular}{|c|c|c|}
 \hline
-\lstinline{T} & $n$ & 用时/标准时间 \\
+\lstinline|T| & $n$ & 用时/标准时间 \\
 \hline
-\lstinline{mint} & $500$ & 0.69 \\
+\lstinline|mint| & $500$ & 0.69 \\
 \hline
-\lstinline{mint} & $1000$ & 4.09 \\
+\lstinline|mint| & $1000$ & 4.09 \\
 \hline
-\lstinline{double} & $500$ & 0.23 \\
+\lstinline|double| & $500$ & 0.23 \\
 \hline
-\lstinline{double} & $1000$ & 2.48 \\
+\lstinline|double| & $1000$ & 2.48 \\
 \hline
-\lstinline{long double} & $500$ & 0.69 \\
+\lstinline|long double| & $500$ & 0.69 \\
 \hline
-\lstinline{long double} & $1000$ & 7.58 \\
+\lstinline|long double| & $1000$ & 7.58 \\
 \hline
 \end{tabular}
 
