--- a/index.tex
+++ b/index.tex
@@ -14,7 +14,7 @@
 \usepackage{setspace}
 \usepackage{fontspec}
 
-\setmonofont{Consolas}
+\setmonofont{Hack}
 
 \lstdefinestyle{cppstyle}{
     language=C++,
@@ -89,7 +89,8 @@ for (int i = 0; i < N; ++i) {
 \section{计算几何}
 \include{doc/smallest_circle}
 
-\section{技巧}
+\section{其他}
 \include{doc/monoid_product}
+\include{doc/linear_equations}
 
 \end{document}
