smallest_circle: real => T

--- a/doc/smallest_circle.tex
+++ b/doc/smallest_circle.tex
@@ -2,7 +2,7 @@
 
 \subsubsection{用法}
 
-通过 \lstinline{SmallestCircle<real>} 实例化最小圆覆盖类，其中 \lstinline{real} 为一个浮点数类。通过 \lstinline{build} 指定一系列二维点，通过重载的函数调用运算符获取一个由圆心和半径组成的 \lstinline{std::pair}。修改成员 \lstinline{EPS} 以设置精度。
+通过 \lstinline{SmallestCircle<T>} 实例化最小圆覆盖类，其中 \lstinline{T} 为一个浮点数类。通过 \lstinline{build} 指定一系列二维点，通过重载的函数调用运算符获取一个由圆心和半径组成的 \lstinline{std::pair}。修改成员 \lstinline{EPS} 以设置精度。
 
 \subsubsection{注意}
 
