--- a/index.tex
+++ b/index.tex
@@ -88,6 +88,7 @@ for (int i = 0; i < N; ++i) {
 
 \section{计算几何}
 \include{doc/smallest_circle}
+\include{doc/half_plane_intersection}
 
 \section{其他}
 \include{doc/monoid_product}
