updates on half_plane_intersection

--- a/doc/half_plane_intersection.tex
+++ b/doc/half_plane_intersection.tex
@@ -4,7 +4,7 @@
 
 \subsubsection{用法}
 
-通过 \lstinline{HalfPlaneIntersection<T>} 实例化半平面交类。通过函数调用运算符向实例传入包含一系列半平面的 \lstinline{std::vector<Line>}，返回半平面交顶点集。
+通过 \lstinline{HalfPlaneIntersection<T>} 实例化半平面交类。通过函数调用运算符向实例传入包含一系列半平面的 \lstinline{std::vector<Line>}，返回按逆时针给出的半平面交顶点集。
 
 半平面的声明如下：
 
