--- a/index.tex
+++ b/index.tex
@@ -90,6 +90,9 @@ for (int i = 0; i < N; ++i) {
 \include{doc/smallest_circle}
 \include{doc/half_plane_intersection}
 
+\section{数论}
+\include{doc/primitive_root}
+
 \section{其他}
 \include{doc/monoid_product}
 \include{doc/linear_equations}
