min25.tex: fixed a typo

--- a/doc/min25.tex
+++ b/doc/min25.tex
@@ -1,10 +1,10 @@
-\subsection{Min_25 筛}
+\subsection{Min\_25 筛}
 
 以亚线性复杂度计算积性函数 $f$ 前缀和。仅要求 $f(p)$ 可以表示为低次多项式。
 
 \subsubsection{用法}
 
-通过 \lstinline{Min25<T, M, F>(a, f)} 构造一个 Min_25 筛对象。
+通过 \lstinline{Min25<T, M, F>(a, f)} 构造一个 Min\_25 筛对象。
 
 \begin{itemize}
 \item \lstinline{T}：结果类型。
