--- a/index.tex
+++ b/index.tex
@@ -94,6 +94,7 @@ for (int i = 0; i < N; ++i) {
 \section{数论}
 \include{doc/primitive_root}
 \include{doc/min25}
+\include{doc/exgcd}
 
 \section{其他}
 \include{doc/monoid_product}
