--- a/index.tex
+++ b/index.tex
@@ -95,6 +95,7 @@ for (int i = 0; i < N; ++i) {
 \include{doc/primitive_root}
 \include{doc/min25}
 \include{doc/exgcd}
+\include{doc/isprime}
 
 \section{其他}
 \include{doc/monoid_product}
