--- a/index.tex
+++ b/index.tex
@@ -82,6 +82,7 @@ for (int i = 0; i < N; ++i) {
 \section{图论}
 \include{doc/flow}
 \include{doc/bipartite_coloring}
+\include{doc/hld}
 
 \section{数据结构}
 \include{doc/link_cut_tree}
