--- a/index.tex
+++ b/index.tex
@@ -98,6 +98,9 @@ for (int i = 0; i < N; ++i) {
 \include{doc/exgcd}
 \include{doc/isprime}
 
+\section{字符串}
+\include{doc/manacher}
+
 \section{其他}
 \include{doc/monoid_product}
 \include{doc/linear_equations}
