--- a/index.tex
+++ b/index.tex
@@ -49,6 +49,7 @@
 
 \begin{document}
 \maketitle
+\thispagestyle{empty}
 \begin{center}
     \textit{版本: }\version
 \end{center}
@@ -99,6 +100,7 @@ for (int i = 0; i < N; ++i) {
 \include{doc/isprime}
 
 \section{字符串}
+\include{doc/suffix_array}
 \include{doc/manacher}
 
 \section{其他}
