--- a/index.tex
+++ b/index.tex
@@ -102,6 +102,7 @@ for (int i = 0; i < N; ++i) {
 \section{字符串}
 \include{doc/suffix_array}
 \include{doc/manacher}
+\include{doc/sam}
 
 \section{其他}
 \include{doc/monoid_product}
