--- a/doc/suffix_array.tex
+++ b/doc/suffix_array.tex
@@ -2,11 +2,9 @@
 
 \subsubsection{用法}
 
-各成员含义如下：
-
 \begin{itemize}
-\item \lstinline{sa}：后缀数组
-\item \lstinline{rk}：后缀数组的逆
+\item \lstinline{sa}：后缀数组。
+\item \lstinline{rk}：后缀数组的逆。
 \item \lstinline{lc}：第 $i$ 位表示第 $i$ 个后缀和第 $i + 1$ 个后缀的最长公共前缀长度。
 \end{itemize}
 
