--- a/index.tex
+++ b/index.tex
@@ -84,6 +84,7 @@ for (int i = 0; i < N; ++i) {
 \include{doc/flow}
 \include{doc/bipartite_coloring}
 \include{doc/hld}
+\include{doc/lca}
 
 \section{数据结构}
 \include{doc/link_cut_tree}
