linear_equations: support nm

--- a/doc/linear_equations.tex
+++ b/doc/linear_equations.tex
@@ -11,7 +11,7 @@
 \item \lstinline{is_zero}：零等函数。
 \end{itemize}
 
-在 \lstinline{a} 上原地操作，将 \lstinline{a} 的系数部分转化为单位矩阵。如有自由元或无解，返回非零值。
+在 \lstinline{a} 上原地操作，将 \lstinline{a} 的系数部分转化为单位矩阵。如无解，返回 -1，否则返回矩阵的秩。
 
 \subsubsection{注意}
 
