--- a/index.tex
+++ b/index.tex
@@ -85,6 +85,7 @@ for (int i = 0; i < N; ++i) {
 \include{doc/bipartite_coloring}
 \include{doc/hld}
 \include{doc/lca}
+\include{doc/scc}
 
 \section{数据结构}
 \include{doc/link_cut_tree}
