--- a/index.tex
+++ b/index.tex
@@ -91,6 +91,7 @@ for (int i = 0; i < N; ++i) {
 \include{doc/link_cut_tree}
 
 \section{计算几何}
+\include{doc/convex_hull}
 \include{doc/smallest_circle}
 \include{doc/half_plane_intersection}
 \include{doc/closest_points}
