scc: added ebcc dlc

--- a/doc/scc.tex
+++ b/doc/scc.tex
@@ -6,9 +6,13 @@
 
 传入图的节点数构造对象，通过 \lstinline{add_edge(u, v)} 添加一条有向边。调用函数调用运算符得到一个长度为 $n$ 的 \lstinline{std::vector<int>}，表示各个节点所属强连通分量的编号。强连通分量以逆拓扑序编号。
 
+\subsubsection{DLC}
+
+对于无向图，对每一条边添加两条有向边，并在 \lstinline{dfs} 时跳过指向父节点的出边一次，即可求边双连通分量。
+
 \subsubsection{性能}
 
-$n, m = 5 \times 10^5$ 时花费 1.91 个标准时间，60.98 Mib 内存。
+$n, m = 5 \times 10^5$ 时花费 1.91 个标准时间，60.98 MiB 内存。
 
 \subsubsection{代码}
 
