--- a/index.tex
+++ b/index.tex
@@ -86,6 +86,7 @@ for (int i = 0; i < N; ++i) {
 \include{doc/hld}
 \include{doc/lca}
 \include{doc/scc}
+\include{doc/bcc}
 
 \section{数据结构}
 \include{doc/link_cut_tree}
