--- a/index.tex
+++ b/index.tex
@@ -90,6 +90,7 @@ for (int i = 0; i < N; ++i) {
 
 \section{数据结构}
 \include{doc/link_cut_tree}
+\include{doc/hash_map}
 
 \section{计算几何}
 \include{doc/convex_hull}
