--- a/index.tex
+++ b/index.tex
@@ -87,6 +87,7 @@ for (int i = 0; i < N; ++i) {
 \include{doc/lca}
 \include{doc/scc}
 \include{doc/bcc}
+\include{doc/eulerian_trail}
 
 \section{数据结构}
 \include{doc/link_cut_tree}
