--- a/index.tex
+++ b/index.tex
@@ -40,11 +40,11 @@
 
 \geometry{a4paper}
 \geometry{top=2cm} 
-\geometry{bottom=1cm}
-\geometry{left=1.5cm}
+\geometry{bottom=2cm}
+\geometry{left=2cm}
 \geometry{right=1.5cm}
 
-\setstretch{0.75}
+\setstretch{0.65}
 \setcounter{tocdepth}{2}
 
 \begin{document}
@@ -70,10 +70,51 @@
 \begin{lstlisting}
 constexpr int N = 1e6;
 std::set<int> s;
-for (int i = 0; i < N; ++i) {
-    s.insert(i);
-}
+for (int i = 0; i < N; ++i) s.insert(i);
 \end{lstlisting}
+
+\begin{tabular}{|c|c|c|}
+\hline
+$n \le$ & $\max\{\omega(n)\}$ & $\max\{d(n)\}$ \\
+\hline
+$10^{1}$ & $2$ & $4$ \\
+\hline
+$10^{2}$ & $3$ & $12$ \\
+\hline
+$10^{3}$ & $4$ & $32$ \\
+\hline
+$10^{4}$ & $5$ & $64$ \\
+\hline
+$10^{5}$ & $6$ & $128$ \\
+\hline
+$10^{6}$ & $7$ & $240$ \\
+\hline
+$10^{7}$ & $8$ & $448$ \\
+\hline
+$10^{8}$ & $8$ & $768$ \\
+\hline
+$10^{9}$ & $9$ & $1344$ \\
+\hline
+$10^{10}$ & $10$ & $2304$ \\
+\hline
+$10^{11}$ & $10$ & $4032$ \\
+\hline
+$10^{12}$ & $11$ & $6720$ \\
+\hline
+$10^{13}$ & $12$ & $10752$ \\
+\hline
+$10^{14}$ & $12$ & $17280$ \\
+\hline
+$10^{15}$ & $13$ & $26880$ \\
+\hline
+$10^{16}$ & $13$ & $41472$ \\
+\hline
+$10^{17}$ & $14$ & $64512$ \\
+\hline
+$10^{18}$ & $15$ & $103680$ \\
+\hline
+\end{tabular}
+
 \newpage
 
 \section{计数}
