closest_points: guarantee stated

--- a/doc/closest_points.tex
+++ b/doc/closest_points.tex
@@ -6,6 +6,8 @@
 
 返回一个 \lstinline{std::pair<int, int>} 表示最近点对的下标。下标从 0 开始编号。
 
+\textbf{保证在输入为整数的情况下能够无误差计算结果。}
+
 \subsubsection{性能}
 
 时间复杂度为 $O(n \log n)$。$n = 5 \times 10^5$ 时约花费 0.95 个标准时间。
