--- a/geometry/convex_hull.tex
+++ b/geometry/convex_hull.tex
@@ -8,8 +8,8 @@
 
 能够正确处理 $n = 0$ 和 $n = 1$ 的情况。
 
-\textbf{保证在输入为整数的情况下能够无误差计算结果。}
+\textbf{在输入为整数的情况下能够无误差计算结果。}
 
 \subsubsection{代码}
 
-\lstinputlisting{src/convex_hull.cpp}
+\lstinputlisting{geometry/convex_hull.hpp}
