--- a/index.tex
+++ b/index.tex
@@ -154,10 +154,10 @@ struct Point {
 
 本模块的项目除非注明，否则不保证在输入为整数的情况下能够无误差计算结果。
 
-\include{doc/convex_hull}
-\include{doc/smallest_circle}
-\include{doc/half_plane_intersection}
-\include{doc/closest_points}
+\include{geometry/convex_hull}
+\include{geometry/smallest_circle}
+\include{geometry/half_plane_intersection}
+\include{geometry/closest_points}
 
 \section{数论}
 \include{doc/primitive_root}
