--- a/geometry/closest_points.tex
+++ b/geometry/closest_points.tex
@@ -6,7 +6,7 @@
 
 返回一个 \lstinline{std::pair<int, int>} 表示最近点对的下标。下标从 0 开始编号。
 
-\textbf{保证在输入为整数的情况下能够无误差计算结果。}
+\textbf{在输入为整数的情况下能够无误差计算结果。}
 
 \subsubsection{性能}
 
@@ -14,4 +14,4 @@
 
 \subsubsection{代码}
 
-\lstinputlisting{src/closest_points.cpp}
+\lstinputlisting{geometry/closest_points.hpp}
