--- a/index.tex
+++ b/index.tex
@@ -166,9 +166,9 @@ struct Point {
 \include{doc/isprime}
 
 \section{字符串}
-\include{doc/suffix_array}
-\include{doc/suffix_automaton}
-\include{doc/manacher}
+\include{string/suffix_array}
+\include{string/suffix_automaton}
+\include{string/manacher}
 
 \section{其他}
 \include{doc/monoid_product}
