--- a/index.tex
+++ b/index.tex
@@ -171,7 +171,7 @@ struct Point {
 \include{string/manacher}
 
 \section{其他}
-\include{doc/monoid_product}
-\include{doc/linear_equations}
+\include{misc/monoid_product}
+\include{misc/linear_equations}
 
 \end{document}
