--- a/index.tex
+++ b/index.tex
@@ -118,8 +118,8 @@ $10^{18}$ & $15$ & $103680$ \\
 \newpage
 
 \section{计数}
-\include{doc/modint}
-\include{doc/poly}
+\include{combinatorics/modint}
+\include{combinatorics/poly}
 
 \section{图论}
 \include{doc/flow}
