--- a/data_structure/link_cut_tree.tex
+++ b/data_structure/link_cut_tree.tex
@@ -29,4 +29,4 @@ $n, q = 2\times 10^5$ 约花费 1.49 个标准时间。
 
 \subsubsection{代码}
 
-\lstinputlisting{src/link_cut_tree.cpp}
+\lstinputlisting{data_structure/link_cut_tree.hpp}
