--- a/index.tex
+++ b/index.tex
@@ -131,8 +131,8 @@ $10^{18}$ & $15$ & $103680$ \\
 \include{doc/eulerian_trail}
 
 \section{数据结构}
-\include{doc/link_cut_tree}
-\include{doc/hash_map}
+\include{data_structure/link_cut_tree}
+\include{data_structure/hash_map}
 
 \section{计算几何}
 
