--- a/index.tex
+++ b/index.tex
@@ -160,10 +160,9 @@ struct Point {
 \include{geometry/closest_points}
 
 \section{数论}
-\include{doc/primitive_root}
-\include{doc/min25}
-\include{doc/exgcd}
-\include{doc/isprime}
+\include{number_theory/min25}
+\include{number_theory/exgcd}
+\include{number_theory/isprime}
 
 \section{字符串}
 \include{string/suffix_array}
