--- a/graph/bcc.tex
+++ b/graph/bcc.tex
@@ -12,4 +12,4 @@ $n, m = 5 \times 10^5$ 时花费 1.63 个标准时间，94.56 MiB 内存。
 
 \subsubsection{代码}
 
-\lstinputlisting{src/bcc.cpp}
+\lstinputlisting{graph/bcc.hpp}
