--- a/graph/scc.tex
+++ b/graph/scc.tex
@@ -16,4 +16,4 @@ $n, m = 5 \times 10^5$ 时花费 1.91 个标准时间，60.98 MiB 内存。
 
 \subsubsection{代码}
 
-\lstinputlisting{src/scc.cpp}
+\lstinputlisting{graph/scc.hpp}
