--- a/index.tex
+++ b/index.tex
@@ -122,13 +122,13 @@ $10^{18}$ & $15$ & $103680$ \\
 \include{combinatorics/poly}
 
 \section{图论}
-\include{doc/flow}
-\include{doc/bipartite_coloring}
-\include{doc/hld}
-\include{doc/lca}
-\include{doc/scc}
-\include{doc/bcc}
-\include{doc/eulerian_trail}
+\include{graph/flow}
+\include{graph/bipartite_coloring}
+\include{graph/hld}
+\include{graph/lca}
+\include{graph/scc}
+\include{graph/bcc}
+\include{graph/eulerian_trail}
 
 \section{数据结构}
 \include{data_structure/link_cut_tree}
