--- a/index.tex
+++ b/index.tex
@@ -172,5 +172,6 @@ struct Point {
 \section{其他}
 \include{misc/monoid_product}
 \include{misc/linear_equations}
+\include{misc/rollback_dsu}
 
 \end{document}
