--- a/index.tex
+++ b/index.tex
@@ -129,6 +129,7 @@ $10^{18}$ & $15$ & $103680$ \\
 \include{graph/scc}
 \include{graph/bcc}
 \include{graph/eulerian_trail}
+\include{graph/directed_mst}
 
 \section{数据结构}
 \include{data_structure/link_cut_tree}
