--- a/prologue/index.tex
+++ b/prologue/index.tex
@@ -58,3 +58,4 @@ $10^{18}$ & $15$ & $103680$ \\
 
 \lstinputlisting[language=bash]{prologue/test.sh}
 \lstinputlisting[language=bash]{prologue/hash.sh}
+\lstinputlisting[language=bash]{prologue/gc.hpp}
