--- a/index.tex
+++ b/index.tex
@@ -117,5 +117,6 @@ struct Point {
 \include{misc/monoid_product}
 \include{misc/linear_equations}
 \include{misc/rollback_dsu}
+\include{misc/reference_counting}
 
 \end{document}
